# frisbee

./: .gitignore  Cargo.toml  LICENSE  README.md  active_object.py  array.frisbee  asd.asd  ast.py  ast_auto.py  ast_def.py  ast_generator.py  ast_parser.py  builtin_types.py  client.frisbee  clippy.toml  config.yaml  config_local.yaml  environ.py  environ_connect.py  evaluation.py  example.frisbee  examples_runner.py  global_conf.py  main.py  makefile  package.yaml  requirements.txt  rustfmt.toml  simple.frisbee  someclass.frisbee  spec.md  test.py
ast_def/: active_object.py  declarations.py  expressions.py  imports.py  program.py  statements.py  types.py
demo/: main.frisbee  master_main.frisbee  node.frisbee  node_main.frisbee  zero_sum.frisbee
evaluation/: active_object.py  builtin_types.py  connector.py  global_conf.py  loader.py  passive_object.py
examples/: !bench_as_in_crafting.frisbee  !complex_test.frisbee  !fprint.frisbee  !if_break.frisbee  !list.frisbee  !maybe.frisbee  !maybe_elvis.frisbee  !maybe_eq.frisbee  !print.frisbee  !simple_active.frisbee  !strings.frisbee  !tuples.frisbee  active_message_with_custom.frisbee  active_simple.frisbee  bench_as_in_crafting.frisbee  builtins.frisbee  complex_test.frisbee  complex_test_mod.frisbee  fizz_buzz.frisbee  foreach.frisbee  if_break.frisbee  list.frisbee  loop.frisbee  master.frisbee  maybe_elvis.frisbee  maybe_eq.frisbee  merge.frisbee  node.frisbee  object.frisbee  object.frisbee.bytecode  print.frisbee  return_required.frisbee  simple.frisbee  simple_active.frisbee  someclass.frisbee  strings.frisbee  (+5 more)
(+190 files in other folders)
