[package]
name = "frisbee"
version = "0.1.0"
authors = ["Anton Zhdan-Pushkin <anton@azhpushkin.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "3"
argh = "0.1.7"
log = "0.4.17"
env_logger = "0.8.4"


[dev-dependencies]
tempfile = "3"
regex = "1.5"

[lib]
name = "frisbee"
path = "src/lib.rs"

[[bin]]
name = "frisbee"
path = "src/main.rs"
